--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>PLay Tic-Tac-Toe</h2>
+    <h2>Play Tic-Tac-Toe</h2>
 </body>
 </html>
