added defer to script, header and main containers to body

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Play Tic-Tac-Toe</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Play Tic-Tac-Toe</h2>
+    <header>
+        <h1>Play Tic-Tac-Toe</h1>
+    </header>
+    
+    <main>
+        <div class="container"></div>
+    </main>
 </body>
 </html>
