added p with class displayUsers to display usernames and tokens

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </header>
     
     <main>
+        <p class="displayUsers"></p>
         <div class="container"></div>
         <p class="displayStatus"></p>
     </main>
